--- a/ProjectProgress4.ipynb
+++ b/ProjectProgress4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM7is9r5nLBmBUhpvVAl9dl",
+      "authorship_tag": "ABX9TyPDjLyJoZeKxzGx/0lQHGpG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -520,7 +520,8 @@
       "metadata": {
         "id": "WBdTfGjV0ibm",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "74a40a01-3115-4d64-9d05-3285057ebd5d"
       },
@@ -624,7 +625,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "006Qt_ch-w9C",
         "outputId": "ba0d2207-efa1-4d15-d5ed-dfeaf1a8d6d4"
@@ -693,7 +695,8 @@
       "metadata": {
         "id": "YcOM91-bzV67",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "35e8c219-1ee8-4550-904b-c7d6a7bc3f64"
       },
@@ -719,7 +722,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "PynTyjr-A2K1",
         "outputId": "905d1059-bb92-44f3-dde7-798888b35859"
@@ -867,7 +871,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1005
         },
         "id": "M30AtzUX87TK",
         "outputId": "debc147c-03b6-4a49-f730-fc95e4607d83"
@@ -1623,7 +1627,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "everything ended up being overexpanded, so went to review math since this likely shouldn't be the case"
+        "everything ended up being overexpanded, so went to review math since this likely shouldn't be the case. altered the code and mathematical approach to change."
       ],
       "metadata": {
         "id": "4hz08iL94kif"
